HelloUltraviolet/Fixtures/RejectedSource/Expressions/AsyncTypeArgIllFormed/Source/Main.uv
//! Rejected async type specimen for an ill-formed Async type argument.

public record AsyncTypePayload<TValue> {
    public value: TValue
}

public procedure asyncTypeArgIllFormedReference() -> Async<AsyncTypePayload, (), (), !> {
    return
}
